4th update of md file

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -165,68 +165,66 @@ darktable 3.0 also offers a clearer arrangement of preferences. The options are 
 
 ## New lighttable features: *culling* and *timeline* views
 
-La table lumineuse est aujourd'hui plus réactive. De nombreuses optimisations de code ont été effectuées pour en améliorer grandement l'usage et ces performances.
+The lighttable is now more reactive. Many code optimizations have been performed to greatly improve usage and performance.
 
-La table lumineuse voit également l'arrivée des fonctions annuler/rétablir via le raccourci `Ctrl+Z` applicable aux mots-clés, à la notation par étoiles, aux libellés de couleur, à la modification des métadonnées, à la suppression ou copier/coller de l'historique ou encore à l'application de styles.
-=> Ce raccourci étant initialement attribué à l'aperçu avec détection de focus, cette dernière fonction est désormais affichable via le raccourci `Ctrl+W`. Par cohérence, l'aperçu affiché auparavant avec `Z` s'affiche désormais via le raccourci `W` ou `Alt+W` (aperçu persistant).
+The lighttable also sees the arrival of undo/redo functions via `Ctrl+Z` shortcut applicable to keywords, star rating, color labels, metadata modification, copy/paste or removal history or even style application.
+=> Since this shortcut was initially assigned to the preview with focus detection, this last function can now be displayed via the shortcut `Ctrl+W`. For consistency, the preview previously displayed with `Z` is now displayed via the shortcut `W` or `Alt+W` (persistent preview).
 
-Il est désormais possible de zoomer sur une image en mode aperçu. Après avoir lancé l'aperçu, utiliser le raccourci `Ctrl+molette souris` pour zommer/dézoomer. Toutefois, sur certaines configurations plus modestes, les nouvelles possibilités de zoom peuvent entraîner un temps d'attente afin de permettre l'affichage de l'image zoomée. Pour accélérer cet affichage, il peut être utile de lancer en mode terminal la commande suivante (darktable doit être fermé, et le rester, pendant l'exécution de cette commande) :
+It is now possible to zoom on an image in preview mode. After launching the preview, use the shortcut `Ctrl+mouse wheel` to zoom in/out. However, in some smaller configurations, the new zoom capabilities may result in a waiting time to allow the zoomed image to be displayed. To speed up this display, it may be useful to run the following command in terminal mode (darktable must be closed, and remain closed, while executing this command):
 
     darktable-generate-cache -m 6
 
-Il est possible de modifier le chiffre en fonction du niveau de zoom souhaité (7 correspondant au niveau 100% et inférieurs). 5 peut être un bon compromis espace disque. En effet, cette commande génère un dossier cache contenant des fichiers jpg correspondant aux historiques actifs à l'exécution de cette commande.
+It is possible to modify the number according to the desired zoom level (7 corresponding to 100% level and lower). 5 can be a good compromise disk space saving. Indeed, this command generates a cache folder containing jpg files corresponding to the active histories at the execution time of this command.
 
 ### *culling* view
 
-La table lumineuse proposait jusque là deux modes d'affichage des images : _table lumineuse zoomable_ et _navigateur de fichiers_. Un troisième mode fait son apparition, et pas des moindres : le mode _sélection_. Ce mode affiche un nombre consécutif et fixe d'images à partir de l'image sélectionnée. Il permet de zoomer et se déplacer dans les images. Le nombre d'images peut être défini par l'utilisateur, et il est possible de s'y déplacer avec la molette de la souris et le clavier.
+The lighttable gives until now two modes : _zoomable light table_ and _file manager_. A third mode appears, and not the least : a _culling_ mode. This mode displays a consecutive (or not) and fixed number of images from the selected one. It allows to zoom and pan on them. Images number can be fixed by the user, and it's possible to move on with mouse wheel and keyboard.
 
-Oui, vous avez bien compris, l'une des fonctionnalités de la table lumineuse les plus souvent demandées est enfin là : la possibilité de comparer des images. Voyons un peu comment ça marche !
+Yes, you understand, one of the most frequently requested features of the lighttable is finally there : possibility to compare images. See now when it works !
 
-Deux options existent :
+Two options exist:
 
-- _zoom fixe_ : le nombre d'images est défini via le curseur à droite du menu de sélection du mode (raccourci de lancement de ce mode : `X`)
-- _plage dynamique_ : le nombre d'images est lui défini par le nombre d'images sélectionnées dans la table lumineuse (raccourci de lancement de ce mode : `Ctrl+X`)
+- _fixed zoom_ : images number is set by a cursor on the right of culling selector menu (launching shortcut of this mode: `x`)
+- _dynamic zoom_ : images number is set by images selected on lighttable (launching shortcut of this mode: `Ctrl+X`)
 
+Of course, here, dynamic zoom will have same effect as fixed one if selected number is the one set on fixed zoom mode. In both cases, you can move on images of the actual collection simply with:
 
-Évidemment, ici, plage dynamique aura le même effet que zoom fixe si le nombre d'images sélectionnées est celui défini par le zoom fixe. Dans ces deux cas, vous pouvez vous déplacer dans les images de la collection en cours simplement par :
+- `Wheel mouse` (or keyboard `left and righ arrows`) : to display previsous or next images.
 
-- `Molette` (ou `flèches gauche et droite` du clavier) : permet d'afficher les images suivantes ou précédentes
+The number of images to be displayed and the mode option are set in the selection mode with settings on the right of the culling menu at the bottom of the lighttable:
 
-Le nombre d'images à afficher et l'option du mode se règlent dans le mode sélection via les paramètres à droite du menu de choix du mode, en bas de la table lumineuse :
+![culling mode](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/culling.png)
 
-![Mode sélection](https://raw.githubusercontent.com/Nilvus/dtorg/db62d826fcc49bdcec12d16691b6396ce0b14aba/content/blog/2019-12-24-darktable-3.0/fr/selection.png)
+If, as here, the number of images to be displayed, defined in this mode, is 2 (fixed zoom), selecting an image will display that image and the next one. This gives us (reminder : mode launched via `x` shortcut):
 
-Si comme ici, le nombre d'images à afficher défini dans ce mode est 2 (zoom fixe), sélectionner une image amènera à afficher cette image et la suivante. Ce qui nous donne (mode lancé via le raccourci `x` pour rappel) :
+![fixed zoom](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/cullingfixe.png)
 
-![zoom fixe](https://raw.githubusercontent.com/Nilvus/dtorg/76ff910b9f0de4e5ff3a50e9c6448027384bfc45/content/blog/2019-12-24-darktable-3.0/en/cullingfixe.png)
+Note here that I have hidden all the panels with the shortcuts seen above, to better benefit from the display of images and comparison possibilities. To display the settings of the selection mode (previous image), just type shortcut `Shift+Ctrl+b`.
 
-Notez ici que j'ai masqué tous les panneaux avec les raccourcis vus plus haut, pour mieux bénéficier de l'affichage des images et des possibilités de comparaison. Pour afficher les réglages du mode sélection (image précédente), il suffirait ici de faire le raccourci `Maj+Ctrl+b`.
+And the same, on six selected images, in dynamic range mode (mode lauched with `Ctrl+x`):
 
-Et la même chose, sur six images sélectionnées, en mode plage dynamique (mode lancé via `Ctrl+x` donc) :
+![dynamic zoom](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/cullingdynamic.png)
 
-![plage dynamique](https://raw.githubusercontent.com/Nilvus/dtorg/76ff910b9f0de4e5ff3a50e9c6448027384bfc45/content/blog/2019-12-24-darktable-3.0/en/cullingdynamic.png)
+In this culling mode, whether in fixed zoom or dynamic zoom, here are the options available to you:
 
-Dans ce mode sélection, que ce soit en zoom fixe ou plage dynamique, voici les options qui s'offrent à vous :
+- `Ctrl+wheel mouse` : zoom in displayed images.
+- `Shift+Ctrl+wheel mouse` : zoom only on the image where the cursor is hover.
+- `Click & drag` : on a zoomed imaged, allow to pan on the image (will apply on all displayed images at the same time).
+- `Shift+Click & drag` : same as above but only on the image where the cursor is hover.
 
-- `Ctrl+molette` : zoomer dans les images présentes (le zoom s'applique à toutes les images affichées)
-- `Maj+Ctrl+molette` : zoomer uniquement dans l'image où est positionné le curseur
-- `Cliquer/déplacer` : sur une image zoomée, permet de se déplacer dans l'image pour afficher la zone voulue (s'applique à toutes les images affichées)
-- `Maj+Cliquer/déplacer` : idem mais uniquement sur l'image où est positionné le curseur
+**Warning :** _Although it is possible to display more than 4 images, zoom and pan within images are only available for up to 4 images, for visual comfort and performance reasons._
 
-**Attention :** _bien qu'il soit possible d'afficher plus de 4 images, ces options de zoom et déplacement dans l'image ne sont possibles que jusqu'à 4 images, pour des questions de confort visuel et de performances._
+As you can see, the culling mode also displays the main image information, rating stars and color labels. It is of course possible, as in other modes, to define them in this mode.
 
-Comme vous pouvez le voir, le mode sélection permet aussi l'affichage des informations principales de l'image, étoiles de notation et labels couleur. Il est bien entendu possible, comme dans les autres modes, de définir la notation, labels couleur de la même manière dans ce mode.
-
-
-Une astuce importante à connaître : vous pouvez simplement afficher ou masquer ces informations selon la position de votre curseur. Pointez le curseur vers le haut d'une image pour les faire apparaître, glissez le vers le bas pour les faire disparaître. 
+An important trick to know: you can simply show or hide these informations depending on the position of your cursor. Point the cursor upwards in an image to make them appear, slide it downwards to make them disappear. 
 
 ### *timeline* view
 
-La vue _chronologie_ est une nouvelle vue qui s'affiche en bas de la table lumineuse via le raccourci `Ctrl+f` (le raccourci est ainsi le même que pour le bandeau d'images en chambre noire, cette vue _chronologie_ s'affichant au même endroit mais dans la vue table lumineuse). Elle peut aussi être activée ou désactivée dans les préférences.
+_timeline_ view is a new view displayed on the bottom of lighttable with `Ctrl+f` shortcut (same shortcut as filmstrip in darkroom view, this new view is displayed on same place but in lighttable view). This view could also be activated or disable on preferences window.
 
-Cette vue permet tout simplement d'afficher une frise chronologique des images en chambre noire et de pouvoir sélectionner une partie par une action de sélection à la souris de la période souhaitée. Il suffit de pointer sur la frise pour voir la période (en mois/année) s'afficher.
+This view display a chronological timeline of your images and allow to select a wanted range with a simple click & drag with your mouse. You just have to move your cursor on a part of this view to see the period (displayed in year/month).
 
-Vous pouvez voir un aperçu de cette chronologie sur les images de thèmes au début de cet article.
+You could see a preview of this timeline view on the four themes images in the beginning of this article.
 
 ## A workflow that extends over the RGB space :
 
@@ -242,7 +240,6 @@ Un résumé présentant ce workflow et ses avantages est néanmoins proposé ci-
 Le workflow RGB linéaire introduit progressivement depuis darktable 2.6 avec _filmique_ et la _balance couleur_ permet de s'affranchir de l'héritage graphique des années 1980-1990 centré sur la photographie à basse plage dynamique destinée à l'impression papier. Ce workflow traditionnel, dit « relatif à l'affichage » (_display-referred_), postule que les valeurs RGB encodent des couleurs (au sens perceptuel) et les manipule de façon psychologiquement réaliste. Malheureusement, les modèles psychophysiques qui relient la lumière (physique) à la sensation colorée (psychologique) ne sont valides que pour des images à faible contraste (ou faible plage dynamique), de l'ordre de 100:1 (6,67 EV), ce qui pose des problèmes croissants à mesure que les appareils photo modernes voient leur plage dynamique augmenter (actuellement entre 12 et 14 EV, soit 4096:1 à 16384:1). À prévoir si vous souhaitez pousser vos basses lumières : virages de teintes parasites et problèmes de sur- ou de sous-saturation, couleur qui explose quand on corrige la luminance, luminance qui explose quand on corrige la couleur… L'enfer.
 
 Le workflow RGB linéaire, dit « relatif à la scène » (_scene-referred_) postule que les valeurs RGB encodent des émissions lumineuses, soit un spectre lumineux réduit à 3 intensités à travers le capteur de l'appareil photo, qui n'est autre qu'un colorimètre. Il manipule les valeurs RGB de façon physiquement réaliste, en reproduisant numériquement l'effet de filtres optiques. Ceci permet non seulement de s'accommoder de n'importe quelle plage dynamique, sans avoir à changer d'algorithmes (donc plus de traitement HDR spécifique), mais aussi d'obtenir des résultats plus naturels et plus prévisibles.
-
 
 Ce nouveau workflow – bien que déjà adopté par l'industrie cinématographique depuis les années 1990, par nécessité pratique – fait encore office de bête curieuse en photographie, et va changer les habitudes des utilisateurs qui vont devoir raisonner de plus en plus en terme de lumière (physique) et de moins en moins en terme de couleur (psychologique et perceptuelle). 
 
@@ -261,8 +258,7 @@ Au passage, quelques bugs ont été réglés, comme la sur-saturation (notamment
 1. La courbe de désaturation est affichée sur le graphe.
 1. Le réglage de saturation globale, implanté pour corriger les effets du bug de préservation de la chrominance, est supprimé. L'utilisation de la saturation dans la balance couleur est recommandée.
 
-![filmique RVB](https://raw.githubusercontent.com/Nilvus/dtorg/614e22eab0072b969428eb1d35499e6c446298d6/content/blog/2019-12-24-darktable-3.0/fr/filmique.png)
-
+![filmic RVB](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/filmicrvb.png)
 
 Deux nouveaux modes de préservation de la chrominance ont été ajoutés en plus de l'ancien (max RVB) : luminance Y et norme puissance. Ils permettront de s'adapter à différents scénarios, par exemple lorsque le mode max RVB assombrit trop les ciels bleus.
 
@@ -274,14 +270,13 @@ Il offre une interface qui permet de définir très rapidement une compensation 
 
 Il innove également sur l'interaction utilisateur, en proposant un curseur interactif qui permet, au survol de l'image, d'afficher l'exposition de la zone sous le curseur et de régler directement la correction d'exposition correspondante via la `molette souris`.
 
-![égaliseur de tons](https://raw.githubusercontent.com/Nilvus/dtorg/614e22eab0072b969428eb1d35499e6c446298d6/content/blog/2019-12-24-darktable-3.0/fr/egaliseurtons.png)
+![tone equalizer](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/toneequalizer.png)
 
 Le mode de préservation des détails (basé sur le filtre guidé) peut être désactivé, auquel cas le module se comporte comme une simple courbe de tonalité avec une interface logarithmique et un algorithme qui préserve la chrominance. L'interpolation des réglages utilisant une série de gaussiennes, elle sera alors plus lisse que l'interpolation par spline monotone et moins oscillante que l'interpolation par splines cubiques des modules *courbes de base* et *courbe des tonalités*.
 
 ### New *rgb curve* and *rgb levels* modules
 
 Ces deux modules reprennent les fonctionnalités des anciens *niveaux* et *courbes de tonalités* (utilisé en mode RVB), mais travaillent dans l'espace RVB du pipeline et utilisent des modes de fusion en RVB linéaire (noter que les anciens modules fusionnent en Lab). Ils permettent en outre de gérer les canaux RVB séparément, et d'utiliser la même logique de préservation de la chrominance que filmique en mode canaux joints.
-
 
 Il est utile de noter que le module *niveaux RVB* utilise exactement le même algorithme que le module *balance couleur* en mode slope, offset, power : le réglage noir correspond au réglage offset, le gris au power, et le blanc au slope. C'est essentiellement l'interface qui change, et le fait que *niveaux RVB* suppose des valeurs d'entrées entre 0 % et 100 % et précalcule une LUT 16 bits pour la transformation à appliquer (technique utilisée il y a 10 ans pour accélérer le traitement, moins utile aujourd'hui), alors que *balance couleur* accepte des valeurs entre 0 et l'infini et calcule directement la valeur exacte des pixels.
 
@@ -314,22 +309,22 @@ The first parameter added is the scattering parameter, which allows to effective
 A small example on a picture of jpg54, with what we used to get (on the left), and what we can get now (on the right).
 We see that the noise reduction on the left creates a very ugly coarse-grained noise.
 
-[Impact of scattering parameter](https://img.linuxfr.org/img/68747470733a2f2f692e6962622e636f2f485468573139772f6e6c6d65616e732d736361747465722e6a7067/nlmeans-scatter.jpg)
+![Impact of scattering parameter](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/nlmeans-scatter.jpg)
 
 Another parameter called “central pixel weight” was added. It mainly controls the details: it allows to recover details (and fine grain noise). When set to high values, the module mainly reduces chrominance noise. **This method is the adviced method if you want to reduce mostly chroma noise.** An example, deliberately a little overdone, with no detail recovery at the top, and a strong detail recovery at the bottom:
 
-[Impact of central pixel weight](https://img.linuxfr.org/img/68747470733a2f2f692e6962622e636f2f5a785952626b392f6e6c6d65616e732d64657461696c732e6a7067/nlmeans-details.jpg)
+![Impact of central pixel weight](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/nlmeans-details.jpg)
 
 ### New features in denoise profiled to improve the user experience
 
 The addition of these new parameters gives a rather complex interface, with many parameters:
 
-[Denoise profiled's interface](https://pixls-discuss.s3.dualstack.us-east-1.amazonaws.com/original/3X/9/6/968cba4a47053fb0bb1c29aac9e709a827794f15.jpeg)
+![Denoise profiled's interface](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/noiseparameters.jpg)
 
 An "auto" mode has thus been added, which sets the vast majority of parameters on its own based on the profile. This mode has a slider to adjust the proposed automatic setting. Increase the value of this slider if the denoising is unsatisfactory, reduce it if the local contrast is smoothed too much.
 This setting should be used especially if you have under-exposed your image significantly.
 
-[Denoise profiled's auto mode](https://pixls-discuss.s3.dualstack.us-east-1.amazonaws.com/original/3X/2/2/22f333e167ed4996b8a0293ab6e9fa5814b42f44.jpeg)
+![Denoise profiled's auto mode](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/noisenlmauto.jpg)
 
 If you change the values in this mode and return to a manual mode, the sliders will be updated, as if you had changed them directly.
 
@@ -358,23 +353,23 @@ Vous trouverez également [l'article en anglais](https://www.darktable.org/2019/
 
 - Définir un répertoire à utiliser dans les préférences à la fin de l’onglet _fonctionnement_
 
-![Répertoire des Lut en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20Fr.png?raw=true)
+![lut folder](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/3dLut.png)
 
 - RDV dans la chambre noire et cliquer sur l'icône dans le module _3D Lut_
 
-![Sélection du répertoire](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20Sel%20Rep%20Fr%20New.png?raw=true)
+![open lut folder](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/3dLutSelRep.png)
 
 - L’ouverture des fichiers ne présente que les fichiers « .png », il faut donc sélectionner « .cube » ou « tous les fichiers » :
 
-![Selection des fichiers .cube et .png en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20Sel%20Fichier%20Fr.png?raw=true)
+![.cube et .png file selection](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/3dLutSelfile.png)
 
 - Vous obtenez avec un .png N/B :
 
-![Application d'un Lut en .png noir et blanc en Français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20png%20Fr%20New.png?raw=true)
+![apply .png black and white Lut](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/3dLutpng.png)
 
 - et avec un .cube de couleur :
 
-![Application d'un Lut en .cube couleur en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/3d%20Lut%20cube%20Fr%20New.png?raw=true)
+![apply .cube color Lut](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/3dLutcube.png)
 
 Pour l’espace couleur, utilisez sRBG avec les .png et REC.709 pour les .cube.
 
@@ -383,6 +378,8 @@ La méthode d’interpolation « tétraédrique » convient dans la grande major
 ### Complete rework of tagging module
 
 Le module mots-clés, présent en chambre noire et en table lumineuse a fait l'objet d'une refonte complète. Son utilisation est beaucoup plus intuitive qu'avant. De nombreuses fonctions qui nécessitaient auparavant des manipulations compliquées sont maintenant accessibles en un ou deux clics. L'aspect général n’a pas changé fondamentalement : deux fenêtres superposées, celle du haut présentant les mots-clés attachés aux images sélectionnées, celle du bas affichant le dictionnaire des mots clés disponibles dans darktable. Entre les deux, une zone de saisie. La comparaison avant/maintenant s’arrête là car le contenu des fenêtres a bien changé et surtout les manipulations sont beaucoup plus intuitives et mieux encadrées.
+
+![tagging module](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/tagging.png)
 
 La fenêtre du haut (mots-clés attachés) présente toujours la liste des mots clés attachés à la sélection courante. Ces mots clés sont toujours présentés par ligne selon la notation propre à darktable (les niveaux de hiérarchie sont séparés par des barres verticales, ‘|’ pipe en langage informatique). Là s’arrêtent les similitudes.
 
@@ -457,11 +454,11 @@ _ajustements de base_ permet, comme son nom l'indique, des ajustements de base, 
 
 Ce module utilise les 2 principaux curseurs d'exposition :
 
-![Exposition](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20exposition%20Fr.png?raw=true)
+![Exposition](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/basicadjustmentsexposition.png)
 
 Les 3 curseurs de _contraste_, _luminosité_ et _saturation_ :
 
-![contraste lum. saturation en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20C_L_S%20Fr.png?raw=true)
+![](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/basicadjustmentsC_L_S.png)
 
 **Attention :** 
 Il ne faut pas utiliser _ajustements de base_ avec les modules _exposition_ et _contraste lum. saturation_. Effectivement cela reviendrait à créer une seconde instance du module sans masque :
@@ -471,46 +468,45 @@ _preserver couleur_ utilise les mêmes valeurs que dans _courbe de base_ (option
 
 J'ai choisi cette photo largement sous-exposée. J'utilise la pipette avec une zone qui me semble représenter une zone correctement exposée :
 
-![selection zone en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20zone%20pipette%20Fr.png?raw=true) 
+![selection zone en français](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/basicadjustmentspicker.png) 
 
 les curseurs sont ajustés pour traiter cette photo :
 
-![photo corrigée en français](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/Ajustement%20de%20base%20correction%20Fr.png?raw=true)
+![photo corrigée en français](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/basicadjustmentscorrection.png)
 
 L'utilisation de ce module permet de corriger rapidement une photo qui ne demande pas trop de traitement. Il est donc particulièrement adapté pour un traitement simple et rapide, ou pour débuter le traitement RAW (comme montré dans cet exemple). La limite principale de ce module étant que ces différents paramètres interviennent habituellement (via les différents modules les proposant par ailleurs) à différents niveaux du traitement de l'image, n'apportant donc pas tout à fait le même rendu.
 
 **=> Il ne doit pas être utilisable avec le nouveau workflow RVB que propose la trilogie : _filmique rvb_, _balance couleur_ et _égaliseur de ton_ auquel s'ajoute en fonction des besoins : _courbe rvb_ et _niveaux rvb_.**
 
-
 ### New _raster mask_
 
 Les masques raster ajoutent un nouveau mode qui permet de réutiliser un masque paramétrique d'un module dans un autre module. 
 
-**Attention :** _le masque raster peut reprendre uniquement un masque d'un module le précédant dans la chaîne de traitement. Il faut également être vigilant à ne pas déplacer un module utilisant un masque raster, avant le module du masque d'origine. Ceci pouvant entraîner des effets indésirables (dans le pire des cas, un crash de darktable)._
+**Warning :** _le masque raster peut reprendre uniquement un masque d'un module le précédant dans la chaîne de traitement. Il faut également être vigilant à ne pas déplacer un module utilisant un masque raster, avant le module du masque d'origine. Ceci pouvant entraîner des effets indésirables (dans le pire des cas, un crash de darktable)._
 
 J'ai repris la photo si dessus pour cet exemple. J'ai commencé par faire un masque paramétrique sur les ombres avec le module exposition :
-![Masque paramétrique de départ](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/M_raster1%20Fr.png?raw=true)
+![Masque paramétrique de départ](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/M_raster1.png)
 
 puis d'éclairer les ombres :
-![Éclaire les ombres](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/M_raster2%20Fr.png?raw=true)
+![Éclaire les ombres](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/M_raster2.png)
 
 Ensuite, pour donner un peu de peps aux ombres dans les verts, j'ai utilisé le même masque dans zone de couleurs avec masque raster. Il suffit pour cela de simplement sélectionner l'option masque raster puis de choisir le masque raster _exposition_ :
-![Masque raster](https://github.com/jpg54/dtorg/blob/master/content/blog/2019-12-24-darktable-3.0/fr/M_raster3%20Fr.png?raw=true)
+![Masque raster](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/M_raster3.png)
 
 # Other improvements
 
-La chaîne de traitement de l'image (pipeline) a été revue en profondeur et optimisée. Il est aussi désormais possible de réordonner les modules via un `Maj+Ctrl+glisser-déposer` de ceux-ci dans la chambre noire ou via le menu d'instance et les options monter/descendre.
-**ATTENTION :** _IL EST TRES IMPORTANT DE COMPRENDRE que déplacer les modules modifie l'ordre de traitement de ceux-ci, donc impacte le rendu de l'image en cours. L'ordre par défaut est sûr et optimisé pour la majorité des usages. Il est recommandé de ne déplacer un module que si vous savez ce que vous faites et quel effet cela aura sur votre image. En aucun cas, ce changement n'est à utiliser pour "classer" ces modules._
+The image processing chain (pipeline) has been thoroughly reviewed and optimized. It is now possible to re-order the modules via a `Shift+Ctrl+Drag&Drop` of these modules in the darkroom or via the instance menu and the up/down options.
+**WARNING:** _It is VERY IMPORTANT TO UNDERSTAND that moving the modules changes the order in which they are processed, so it affects the rendering of the current image. The default order is safe and optimized for the majority of uses. It is recommended to move a module only if you know what you are doing and what effect it will have on your image. Under no circumstances should this change be used to "classify" these modules.
 
-Le module _zones de couleur_ affiche maintenant un histogramme basé sur l'option «sélectionner par». Il est désormais possible d'ajouter et de supprimer des nœuds à la courbe, mais ces nœuds peuvent toujours être déplacés avec le contrôle de taille à l'ancienne en cochant la case modifier par zone. Il existe également une nouvelle option de traitement «prononcé» et une nouvelle pipette qui permet de créer une courbe basée sur la zone d'image sélectionnée.
+The _colored areas_ module now displays a histogram based on the "select by" option. It is now possible to add and remove nodes to the curve, but these nodes can still be moved with the old size control by checking the edit by area box. There is also a new "pronounced" processing option and a new picker that allows you to create a curve based on the selected image area.
 
-Quelques améliorations de performances et visuelles sont aussi à souligner sur les modules _pipette_ (panneau de gauche de la chambre noire) et _courbe de tonalités_. Plus globalement, de nombreuses améliorations ont été faites autour des pipettes de sélection dans divers endroits de darktable.
+Some performance and visual improvements are also to be highlighted on the _color picker_ (left panel of the darkroom) and _tone curve_ modules. More generally, many improvements have been made around the selection picker in various darktable locations.
 
-Une nouvelle option de préférence permet de développer ou replier un module de la chambre noire automatiquement dès son activation ou désactivation.
+A new preference option allows you to develop or fold a darkroom module automatically as soon as it is activated or deactivated.
 
-L'exportation originelle vers Picasa a été mise à jour vers Google Photos.
+The original export to Picasa has been updated to Google Photos.
 
-darktable 3.0 apporte également de nombreuses corrections de bugs et quelques autres améliorations mineures probablement oubliées ici tant cette nouvelle version est riche de nouveautés.
+darktable 3.0 also brings many bug fixes and some other minor improvements probably forgotten here due to this so rich new version in new features.
 
 # A 3.0.1 release already on its way
 
@@ -534,10 +530,7 @@ This list is not exhaustive and presents the main developments known to date.
 
 # About this article
 
-This article is licensed under the terms of the [Attribution 2.0
-Generic (CC BY 2.0)](https://creativecommons.org/licenses/by/2.0/),
-or, at your option, the [Creative Commons BY-NC-SA 3.0
-License](https://creativecommons.org/licenses/by-nc-sa/3.0/).
+This article is licensed under the terms of the [Attribution 2.0 Generic (CC BY 2.0)](https://creativecommons.org/licenses/by/2.0/), or, at your option, the [Creative Commons BY-NC-SA 3.0 License](https://creativecommons.org/licenses/by-nc-sa/3.0/).
 
 **Contributors:**
 [Nilvus](https://github.com/Nilvus), [jpg54](https://www.flickr.com/photos/113336874@N07/), Ro_G, [aurelienpierre](https://aurelienpierre.com/), [jpv](http://jpverrue.fr), rawfiner,
